# nwnx2-linux

plugins/chat/: NWNXChat.cpp
plugins/db/: CHANGES  CMakeLists.txt  HookSCORCO.cpp  HookSCORCO.h  NWNXdb.cpp  NWNXdb.h  ObjectStorage.cpp  ObjectStorage.h  README  db.cpp  db.h  mysql.cpp  mysql.h  nwnx2_db.ini  pgsql.cpp  pgsql.h  plugin-db.cpp  sqlite.cpp  sqlite.h
plugins/db/nwn/: nwnx_aggregate.nss  nwnx_base.nss  nwnx_db.nss  nwnx_serializer.nss  nwnx_test_db.mod
plugins/gdbm/: CMakeLists.txt  GdbmPool.cpp  GdbmPool.h  Makefile.in  NWNXgdbm.cpp  NWNXgdbm.h  README.txt  gdbm2dump.cpp  plugin-gdbm.cpp  test_gdbmpool.cpp
plugins/gdbm/nwn/: nwnx_aggregate.nss  nwnx_gdbm.erf  nwnx_gdbm.nss  nwnx_gdbm_aps.nss  nwnx_gdbm_bio.nss
plugins/odmbc/: NWNXodbc.cpp  NWNXodbc.h  ObjectStorage.cpp
plugins/system/: CMakeLists.txt  Makefile.in  NWNXSystem.h  SystemStrCmds.gperf  nwnx_system.nss
plugins/system/funcs/: f_FileSize.c  f_GetMilliseconds.c
